--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "antd": "^5.0.1",
     "gatsby": "^5.0.0",
     "gatsby-plugin-image": "^3.1.0",
+    "gatsby-plugin-less": "^7.0.0",
     "gatsby-plugin-manifest": "^5.1.0",
     "gatsby-plugin-sharp": "^5.1.0",
     "gatsby-plugin-sitemap": "^6.1.0",
     "gatsby-source-filesystem": "^5.1.0",
     "gatsby-transformer-sharp": "^5.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0"
   }
 }
